[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scripts/EnemyAir.gd" type="Script" id=1]
[ext_resource path="res://Images/AirMob.png" type="Texture" id=2]
[ext_resource path="res://Images/slice12.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, -32, 24, 16, -24, 16 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 128.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="AirMob" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
rotspeed = 10
amplitude = 10
frequency = 12
speed = 10
damage = 20

[node name="Collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Body" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Wings" type="Sprite" parent="."]

texture = ExtResource( 3 )
offset = Vector2( 0, 4 )

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Detection" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Damage" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Damage"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]

[connection signal="body_enter" from="Damage" to="." method="_on_Damage_body_enter"]


